cabal-version: 2.2

name:           RSA-cryptosystem
version:        0.1.0.0
author:         Arnecke, Möhle
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/ImPunktFinn/RSA-cryptosystem

executable RSA_cryptosystem-exe
  main-is:          Main.hs
  other-modules:    Math
                    Cryptography
                    Transcoding
                    Key
                    MillerRabin
  build-depends:    base >=4.7 && <5,
                    random
  default-language: Haskell2010